src/stories/CbAccordion/cb-accordion.scss
@use '@/styles/helpers' as *;

.a-accordion {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: var(--space-3);

  &__question {
    background: transparent;
    border: 0;
    padding: var(--space-1-5) var(--space-1-5) var(--space);
    display: flex;
    align-items: center;
    justify-self: center;
    text-align: left;
    font-weight: bold;
    cursor: pointer;
    position: relative;

    @include media('<sm') {
      width: 100%;
      text-align: center;
      justify-content: center;
    }

    &::after {
      content: '';
      display: block;
      background-color: var(--yellow);
      height: 100%;
      width: 100%;
      position: absolute;
      top: 0;
      left: 0;
      z-index: -1;
      opacity: 0.4;
      transition: var(--transition);
    }

    &-open,
    &:hover {
      &::after {
        opacity: 1;
      }
    }
  }

  &__answer {
    max-height: 0;
    overflow: hidden;
    transition:
      border 0.2s ease-in-out,
      max-height 0.3s ease-in-out;
    border: 2px solid transparent;

    &-open {
      border-color: var(--yellow);
      max-height: 200vh;
      --margin: var(--space-3);

      > * {
        transition: var(--transition);
        margin-left: var(--margin);
        margin-right: var(--margin);
      }

      > :first-child {
        margin-top: var(--margin);
      }

      > :last-child {
        margin-bottom: var(--margin);
      }
    }

    &-closed {
      max-height: 0;

      > * {
        opacity: 0;
      }
    }
  }
}

